--- a/resources/css/bootstrap.css
+++ b/resources/css/bootstrap.css
@@ -6581,4 +6581,8 @@ button.close {
     display: none !important;
   }
 }
+.dario{
+  width: 250px;
+  height: 72px;
+}
 /*# sourceMappingURL=bootstrap.css.map */
